Fix missing include path in contrib/mmap

--- a/contrib/mmap/CMakeLists.txt
+++ b/contrib/mmap/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(
     ../../src
     ../../src/shared
     ../../src/game
+    ../../src/game/Maps/
     ../../src/game/vmap
     ../../src/game/Commands
     ../../dep/include/g3dlite
